# lm-buddy

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE.md  README.md  dev.ipynb  main.pyproject.toml  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/workflows/: dependent_prs.yaml  docs.yaml  main.yaml  merge_checks.yaml  pr_checks.yaml  publish.yaml  style.yaml  tests.yaml  version.yaml
docs/source/: conf.py  evaluation_concepts.md  finetuning_concepts.md  index.rst  readme_link.md
docs/source/examples/: README.md
examples/: README.md  dataset_preprocessing.ipynb  dev_workflow.ipynb
examples/configs/: finetuning.yaml  finetuning_config.yaml  lm_harness_config.yaml  lm_harness_hf_config.yaml  lm_harness_inference_server_config.yaml  lm_harness_vllm_config.yaml  simple.yaml
examples/configs/evaluation/: hf_evaluate_config.yaml  hf_evaluate_inference_server_config.yaml  hf_evaluate_openai_config.yaml  lm_harness_hf_config.yaml  lm_harness_inference_server_config.yaml  lm_harness_quantized_config.yaml  prometheus_config.yaml  ragas_config.yaml
examples/configs/finetuning/: Readme.md  finetuning_config.yaml  ray_config.yaml
examples/configs/finetuning/lm_buddy_config/: finetuning_config.yaml
examples/configs/prometheus/: prometheus_config.yaml
examples/configs/ragas/: ragas_config.yaml
examples/configs/serving/: ray_serve.yaml
examples/dev_submission/: sample_eval_job.py
examples/dev_submission/configs/: eval_config.yaml
examples/notebooks/: dataset_preprocessing.ipynb  dev_ray_submission.ipynb  dev_workflow.ipynb  direct_job_execution.ipynb  job_runner.ipynb
examples/sample_job/configs/: eval_config.yaml
requirements/: core.txt  docs.txt  lint.txt  ludwig.txt  ray.txt  test.txt
scripts/: validate_version_bump.py
src/flamingo/: __main__.py  cli.py  types.py  utils.py
src/flamingo/cli/: __init__.py  finetuning.py  lm_harness.py  run.py  schema.py  simple.py
src/flamingo/integrations/: vllm.py
src/flamingo/integrations/huggingface/: __init__.py  adapter_config.py  asset_loader.py  dataset_config.py  loading_utils.py  model_config.py  model_name_or_path.py  quantization_config.py  repo_config.py  tokenizer_config.py  trainer_config.py  utils.py
src/flamingo/integrations/vllm/: __init__.py  model_config.py  path_config.py
src/flamingo/integrations/wandb/: __init__.py  artifact_config.py  artifact_link.py  artifact_loader.py  artifact_logger.py  artifact_type.py  artifact_utils.py  configs.py  run_config.py  run_link.py  run_utils.py  uri_scheme.py  utils.py  wandb_environment.py  wandb_mixin.py
src/flamingo/jobs/: __init__.py  base.py  evaluation_config.py  finetuning_config.py  lm_harness_config.py  ragas_config.py  simple_config.py  utils.py
src/flamingo/jobs/configs/: __init__.py  base_config.py  finetuning_config.py  lm_harness_config.py  simple_config.py
src/flamingo/jobs/drivers/: __init__.py  finetuning.py  lm_harness.py
src/flamingo/jobs/entrypoints/: __init__.py  finetuning_entrypoint.py  lm_harness_entrypoint.py  ludwig_entrypoint.py  run_finetuning.py  run_lm_harness.py  simple_entrypoint.py
src/flamingo/jobs/finetuning/: __init__.py  config.py  entrypoint.py  utils.py
src/flamingo/jobs/lm_harness/: __init__.py  config.py  entrypoint.py
src/flamingo/jobs/ludwig/: __init__.py  entrypoint.py
src/flamingo/jobs/ragas/: __init__.py  entrypoint.py  ragas.py  ragas_config.py
src/flamingo/jobs/simple/: __init__.py  config.py  entrypoint.py
src/lm_buddy/: __init__.py  __main__.py  asset_loader.py  buddy.py  constants.py  paths.py  preprocessing.py  storage.py  types.py
src/lm_buddy/cli/: __init__.py  dummy.py  evaluate.py  finetune.py  run.py  schema.py  serve.py  utils.py
src/lm_buddy/configs/: base.py  common.py  finetuning.py  huggingface.py  vllm.py  wandb.py
src/lm_buddy/configs/huggingface/: adapter.py  dataset.py  model.py  quantization.py  tokenizer.py  trainer.py
src/lm_buddy/configs/jobs/: __init__.py  common.py  finetuning.py  hf_evaluate.py  job_config.py  lm_harness.py  prometheus.py  ragas.py
src/lm_buddy/finetuning/: sft.py
src/lm_buddy/integrations/: vllm.py
src/lm_buddy/integrations/huggingface/: __init__.py  adapter_config.py  asset_loader.py  dataset_config.py  model_config.py  quantization_config.py  repo_config.py  tokenizer_config.py  trainer_config.py
src/lm_buddy/integrations/wandb/: __init__.py  artifact_config.py  artifact_loader.py  artifact_utils.py  (+2 more)
src/lm_buddy/jobs/: __init__.py  asset_loader.py  common.py  finetuning.py  model_clients.py  run.py  utils.py
src/lm_buddy/serving/: app.py  value.py
src/lm_buddy/tasks/: __init__.py  base.py  common.py  finetuning.py  lm_harness.py  prometheus.py  simple.py  task_output.py  task_utils.py  utils.py
src/lm_buddy/tracking/: artifact_utils.py  platform.py  run_utils.py
tests/: artifacts.py  conftest.py  test_utils.py  utils.py
tests/configs/: test_lm_harness_config.py
tests/integration/: README.md  conftest.py  test_finetuning.py  test_integration_setup.py  test_lm_harness.py  test_simple.py  utils.py
tests/integrations/huggingface/: test_loading_utils.py  test_quantization_config.py
tests/integrations/wandb/: test_artifact_config.py  test_run_config.py  test_wandb_environment.py
tests/jobs/: conftest.py  test_evaluation_config.py  test_finetuning_config.py  test_lm_harness_config.py
tests/jobs/configs/: test_finetuning_config.py  test_lm_harness_config.py
tests/jobs/finetuning/: test_config.py  test_finetuning_config.py
tests/jobs/lm_harness/: test_config.py  test_lm_harness_config.py
tests/jobs/simple/: test_entrypoint.py
tests/resources/: README.md  finetuning_config.yaml  lm_harness_config.yaml
tests/resources/datasets/: create_xyz.py
tests/unit/: conftest.py  test_paths.py  test_preprocessing.py  test_types.py
tests/unit/configs/: test_adapter_config.py  test_common.py  test_dataset_config.py  test_quantization_config.py  test_run_config.py
tests/unit/jobs/: test_asset_loader.py  test_finetuning_config.py  test_lm_harness_config.py  test_run_job.py
(+91 files in other folders)
