[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "lm-buddy"
version = "0.2.1"
description = "Ray-centric library for finetuning and evaluation of (large) language models."
readme = "README.md"
license = { file = "LICENSE.md" }
authors = [
    { name = "Sean Friedowitz", email = "sean@mozilla.ai" },
    { name = "Aaron Gonzales", email = "aaron@mozilla.ai" },
    { name = "Vicki Boykis", email = "vicki@mozilla.ai" },
]
requires-python = ">=3.10,<3.11"
dynamic = ["dependencies", "optional-dependencies"]

[project.urls]
"Homepage" = "https://github.com/mozilla-ai/lm-buddy"

[project.scripts]
lm_buddy = "lm_buddy.cli:cli"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements/core.txt"] }

[tool.setuptools.dynamic.optional-dependencies]
dev = { file = [
    "requirements/test.txt",
    "requirements/lint.txt",
    "requirements/docs.txt",
] }

[tool.pytest.ini_options]
addopts = "-v --cov src --no-cov-on-fail --disable-warnings"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

extend-include = ["*.ipynb"]

line-length = 100


[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "UP",  # pyupgrade
    "I",   # import sorting
    "N",   # pep8 naming
    "ISC", # flake8 implicit string concat
    "PTH", # flake8-use-pathlib use Path library
    "PD",  # pandas-vet
]

ignore = [
    "D417", # documentation for every function parameter.
    "N806", # ignore uppercased variables
    "N812", # import as uppercased
    "N803", # lowercased args
    "N817", # imported as acryonym
    "B023", # doesn't bind loop var, we do this a lot in torch
    "D100", # module-level docstrings
    "N805", # first param needs to be self; pydantic breaks this sometimes
]

# Only format Jupyter notebooks, but don't lint them
exclude = ["*.ipynb"]

# Avoid trying to fix some violations
unfixable = ["B", "SIM", "TRY", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["lm_buddy"]

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = [
    "E402", # import violations
    "F401", # import unused
    "F403", # import undefined
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false
